[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.138.0",
    "grandalf>=0.8",
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "minio>=7.2.20",
    "numpy>=2.4.6",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
]
